# TaskHub

./: .gitignore  CMakeLists.txt  project.md  test_db.cpp
.kiro/specs/add-list-popup-overflow/: .config.kiro  bugfix.md
app/: main.cpp
cpp/models/: Task.cpp  Task.h
cpp/services/: AuthService.cpp  AuthService.h  FirestoreService.cpp  FirestoreService.h  LocalCacheService.cpp  LocalCacheService.h  SyncService.cpp  SyncService.h  TaskService.cpp  TaskService.h
cpp/viewmodels/: TaskListViewModel.cpp  TaskListViewModel.h
qml/: Main.qml
qml/components/: CalendarView.qml  EisenhowerMatrixView.qml  HabitTrackerView.qml  LoginScreen.qml  PomodoroView.qml  SearchView.qml  Sidebar.qml  SidebarIcon.qml  TaskDetail.qml  TaskItem.qml  TaskList.qml
qml/theme/: Theme.qml
